--- a/I2C_SPI_Peripherals_and_OS/I2C_SPI_Peripherals_and_OS.ioc
+++ b/I2C_SPI_Peripherals_and_OS/I2C_SPI_Peripherals_and_OS.ioc
@@ -15,22 +15,29 @@ Mcu.Family=STM32L4
 Mcu.IP0=FREERTOS
 Mcu.IP1=I2C2
 Mcu.IP2=NVIC
-Mcu.IP3=RCC
-Mcu.IP4=SYS
-Mcu.IP5=TIM2
-Mcu.IP6=USART1
-Mcu.IPNb=7
+Mcu.IP3=QUADSPI
+Mcu.IP4=RCC
+Mcu.IP5=SYS
+Mcu.IP6=TIM2
+Mcu.IP7=USART1
+Mcu.IPNb=8
 Mcu.Name=STM32L475V(C-E-G)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PC13
-Mcu.Pin1=PB10
-Mcu.Pin2=PB11
-Mcu.Pin3=PB6
-Mcu.Pin4=PB7
-Mcu.Pin5=VP_FREERTOS_VS_CMSIS_V1
-Mcu.Pin6=VP_SYS_VS_tim6
-Mcu.Pin7=VP_TIM2_VS_ClockSourceINT
-Mcu.PinsNb=8
+Mcu.Pin1=PE10
+Mcu.Pin10=PB7
+Mcu.Pin11=VP_FREERTOS_VS_CMSIS_V1
+Mcu.Pin12=VP_SYS_VS_tim6
+Mcu.Pin13=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin2=PE11
+Mcu.Pin3=PE12
+Mcu.Pin4=PE13
+Mcu.Pin5=PE14
+Mcu.Pin6=PE15
+Mcu.Pin7=PB10
+Mcu.Pin8=PB11
+Mcu.Pin9=PB6
+Mcu.PinsNb=14
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L475VGTx
@@ -69,6 +76,22 @@ PC13.GPIOParameters=GPIO_Label
 PC13.GPIO_Label=BLUE_BUTTON
 PC13.Locked=true
 PC13.Signal=GPXTI13
+PE10.Mode=Single Bank
+PE10.Signal=QUADSPI_CLK
+PE11.Mode=Single Bank
+PE11.Signal=QUADSPI_NCS
+PE12.Locked=true
+PE12.Mode=Single Bank
+PE12.Signal=QUADSPI_BK1_IO0
+PE13.Locked=true
+PE13.Mode=Single Bank
+PE13.Signal=QUADSPI_BK1_IO1
+PE14.Locked=true
+PE14.Mode=Single Bank
+PE14.Signal=QUADSPI_BK1_IO2
+PE15.Locked=true
+PE15.Mode=Single Bank
+PE15.Signal=QUADSPI_BK1_IO3
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
