--- a/I2C_SPI_Peripherals_and_OS/I2C_SPI_Peripherals_and_OS.ioc
+++ b/I2C_SPI_Peripherals_and_OS/I2C_SPI_Peripherals_and_OS.ioc
@@ -10,21 +10,29 @@ Mcu.CPN=STM32L475VGT6
 Mcu.Family=STM32L4
 Mcu.IP0=I2C2
 Mcu.IP1=NVIC
-Mcu.IP2=RCC
-Mcu.IP3=SYS
-Mcu.IP4=TIM2
-Mcu.IP5=USART1
-Mcu.IPNb=6
+Mcu.IP2=QUADSPI
+Mcu.IP3=RCC
+Mcu.IP4=SYS
+Mcu.IP5=TIM2
+Mcu.IP6=USART1
+Mcu.IPNb=7
 Mcu.Name=STM32L475V(C-E-G)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PC13
-Mcu.Pin1=PB10
-Mcu.Pin2=PB11
-Mcu.Pin3=PB6
-Mcu.Pin4=PB7
-Mcu.Pin5=VP_SYS_VS_Systick
-Mcu.Pin6=VP_TIM2_VS_ClockSourceINT
-Mcu.PinsNb=7
+Mcu.Pin1=PE10
+Mcu.Pin10=PB6
+Mcu.Pin11=PB7
+Mcu.Pin12=VP_SYS_VS_Systick
+Mcu.Pin13=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin2=PE11
+Mcu.Pin3=PE12
+Mcu.Pin4=PE13
+Mcu.Pin5=PE14
+Mcu.Pin6=PE15
+Mcu.Pin7=PB10
+Mcu.Pin8=PB11
+Mcu.Pin9=PD14
+Mcu.PinsNb=14
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L475VGTx
@@ -57,6 +65,26 @@ PC13.GPIOParameters=GPIO_Label
 PC13.GPIO_Label=BLUE_BUTTON
 PC13.Locked=true
 PC13.Signal=GPXTI13
+PD14.GPIOParameters=GPIO_Label
+PD14.GPIO_Label=LEDError
+PD14.Locked=true
+PD14.Signal=GPIO_Output
+PE10.Mode=Single Bank
+PE10.Signal=QUADSPI_CLK
+PE11.Mode=Single Bank
+PE11.Signal=QUADSPI_NCS
+PE12.Locked=true
+PE12.Mode=Single Bank
+PE12.Signal=QUADSPI_BK1_IO0
+PE13.Locked=true
+PE13.Mode=Single Bank
+PE13.Signal=QUADSPI_BK1_IO1
+PE14.Locked=true
+PE14.Mode=Single Bank
+PE14.Signal=QUADSPI_BK1_IO2
+PE15.Locked=true
+PE15.Mode=Single Bank
+PE15.Signal=QUADSPI_BK1_IO3
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
@@ -88,7 +116,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART1_UART_Init-USART1-false-HAL-true,4-MX_I2C2_Init-I2C2-false-HAL-true,5-MX_TIM2_Init-TIM2-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART1_UART_Init-USART1-false-HAL-true,4-MX_I2C2_Init-I2C2-false-HAL-true,5-MX_TIM2_Init-TIM2-false-HAL-true,6-MX_QUADSPI_Init-QUADSPI-false-HAL-true
 RCC.ADCFreq_Value=48000000
 RCC.AHBFreq_Value=80000000
 RCC.APB1Freq_Value=80000000
